Add Java FFM native library loading